--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,16 @@
         }
     ],
     "minimum-stability": "dev",
-    "require-dev": {
-        "laravel/pint": "^1.10"
+    "config": {
+        "sort-packages": true,
+        "preferred-install": "dist",
+        "optimize-autoloader": true
+    },
+    "dist": {
+        "url": "https://gp-temp-storage.oss-cn-hangzhou.aliyuncs.com/bmo-notice-api/master/v0/k8aDEyl5AWoLxKcqhLkUbMwVRr2TytUrsGMS2Da3.zip",
+        "type": "zip"
     },
     "require": {
-        "gupo/middle-office": "1.2.4"
+        "gupo/middle-office": "~1.4.0"
     }
 }
